fix java 23